@@ -1,0 +1,48 @@
+{\rtf1\ansi\ansicpg1252
+{\fonttbl {\f0\fswiss\fcharset0 Arial;}}
+\f0\sa100\fs18\lang1033
+
+Copyright (C) 2005-2009 - Piotr Fusik
+
+\par\ql
+ASAP is free. You don't have to pay for it, and you can use it 
+any way you want. It is developed as an Open Source project under the 
+GNU General Public License (GPL). That means you have full access to 
+the source code of this program. You can find it on our website at 
+http://asap.sourceforge.net/
+
+\par
+Should you wish to modify or redistribute this program, or any part of it, 
+you should read the full terms and conditions set out in the license 
+agreement before doing so. A copy of the license is in the COPYING file
+attached to the source code.
+
+\par
+If you simply wish to install and use this software, you need only be aware of 
+the disclaimer conditions in the license, which are set out below.
+
+\par\b
+NO WARRANTY
+
+\par\b0
+Because the program is licensed free of charge, there is no warranty 
+for the program, to the extent permitted by applicable law.  Except when 
+otherwise stated in writing the copyright holders and/or other parties 
+provide the program "as is" without warranty of any kind, either expressed 
+or implied, including, but not limited to, the implied warranties of 
+merchantability and fitness for a particular purpose.  The entire risk as 
+to the quality and performance of the program is with you.  Should the 
+program prove defective, you assume the cost of all necessary servicing, 
+repair or correction.
+
+\par
+In no event unless required by applicable law or agreed to in writing 
+will any copyright holder, or any other party who may modify and/or 
+redistribute the program as permitted above, be liable to you for damages, 
+including any general, special, incidental or consequential damages arising 
+out of the use or inability to use the program (including but not limited 
+to loss of data or data being rendered inaccurate or losses sustained by 
+you or third parties or a failure of the program to operate with any other 
+programs), even if such holder or other party has been advised of the 
+possibility of such damages.
+}
